# stellarcmap

./: README.rst  environment.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/stellarcmap/: index.rst
licenses/: LICENSE.rst
stellarcmap/: core.py  version.py
