[metadata]
name = stellarcmap
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/stellarcmap
description = Stellar colormaps in matplotlib
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires = 
    matplotlib
    astropy
    numpy


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    sphinx-book-theme
    astroquery

[tool:pytest]
testpaths = "stellarcmap" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  stellarcmap/__init*
  stellarcmap/conftest.py
  stellarcmap/*setup_package*
  stellarcmap/tests/*
  stellarcmap/*/tests/*
  stellarcmap/extern/*
  stellarcmap/version*
  */stellarcmap/__init*
  */stellarcmap/conftest.py
  */stellarcmap/*setup_package*
  */stellarcmap/tests/*
  */stellarcmap/*/tests/*
  */stellarcmap/extern/*
  */stellarcmap/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
